TypeKit, Masking, CSS
Added FPF fonts via TypeKit, added mask to get rid of black collar,
fixed up css to match styleguide

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="js/tabletop.js"></script>
 <script src="data.js"></script>
 <link href="css/fpf-accomplishments.css" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/zty2qnd.css">
 
 <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -73,7 +74,7 @@ function closeNav() {
 
 <div id="map"></div>
 
-<div class="logobox"><a href="https://www.forestparkforever.org" target="_blank"><img src='images/fpf-logo.png' height = 80></a></div>
+<div class="logobox"><a href="https://www.forestparkforever.org" target="_blank"><img src="images/fpf-logo.png"></a></div>
 
 </div>
 
