Zoom Extents, Images
Fix zoom extents for compatibility with mobile, add first two images

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ function closeNav() {
 
 <div id="map"></div>
 
-<div class="logobox"><a href="https://www.forestparkforever.org" target="_blank"><img src="images/fpf-logo.png"></a></div>
+<div class="logobox"><a href="https://www.forestparkforever.org" target="_blank"><img src="images/fpf-logo-bg.png"></a></div>
 
 </div>
 
