--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="data.js"></script>
 <link href="css/fpf-accomplishments.css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.typekit.net/zty2qnd.css">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
