made logobox-mobile and logobox-desktop singular css classes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
 <div id="map"> </div>
 
-<div class="logobox"><a href="https://www.forestparkforever.org" target="_blank"><img src="images/fpf-logo-bg.png"></a></div>
+<div class="logobox-desktop"><a href="https://www.forestparkforever.org" target="_blank"><img src="images/fpf-logo-bg.png"></a></div>
+<div class="logobox-mobile"><a href="https://www.forestparkforever.org" target="_blank"><img src="images/fpf-logo-mobile.png"></a></div>
 
 </div>
 
